odoo/service.yaml
# odoo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odoo
spec:
  selector:
    app: odoo
  ports:
    - protocol: TCP
      port: 8069
      targetPort: 8069
